feat: Add Swagger/OpenAPI, Lombok, security fixes, and idempotent seeding
- Add Swagger/OpenAPI UI via springdoc-openapi (accessible at /swagger-ui.html)
  - JWT BearerAuth security scheme with Authorize button
  - Role permissions table and auth flow documented inline
- Add Lombok to all models and DTOs (User, Pets, LoginRequest, SignupRequest,
  CreatePetRequest, PetResponse) removing ~180 lines of boilerplate
- Add richer Pets model: age, color, adoptionStatus (AVAILABLE/ADOPTED/PENDING),
  createdAt, updatedAt (audited by @EnableMongoAuditing)
- Fix DbSeeder: replace unconditional deleteAll() with idempotent count() guard
  so existing data is never wiped on restart
- Add password strength validation (@Pattern) on SignupRequest: requires at
  least one uppercase letter, one digit, and one special character
- Add RuntimeException handler in GlobalExceptionHandler to return clean 500 JSON
  instead of leaking stack traces when DB roles are missing
- Permit Swagger UI and Actuator health paths without JWT in WebSecurityConfig
- Disable Redis auto-configuration in application.properties (not yet used)
- Upgrade CI workflow: add MongoDB service container, jacocoTestReport task,
  test-results artifact upload, and Codecov integration
- Add Actuator health/info endpoints with MongoDB and disk status details

Relates to issue #4 (code coverage groundwork)